--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,9 @@
     <div class="container">
       <!-- <button id="changeColor">Highlight</button>
       <button id="speakButton">Speak</button> -->
-      <button id="fontButton">Get Fonts</button>
+      <header>
+        <button id="fontButton">Get Fonts</button>
+      </header>
       <p id="fonts"></p>
       <div id="fontContainer"></div>
       <script src="popup.js"></script>
