--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,7 @@
       </header>
       <p id="fonts"></p>
       <div id="fontContainer"></div>
+      <div id="errorContainer"></div>
       <script src="popup.js"></script>
     </div>
   </body>
